<resources>
    <string name="app_name">MyAndroidAssignment</string>
    <string name="password_not_matched">Passwords don\'t match</string>
    <string name="user_created">Registration Successful User created</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="register">Register</string>
    <string name="enter_your_short_bio">Enter your Short Bio</string>
    <string name="enter_your_username">Enter your UserName</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_email_id">Please enter Email Id</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="please_enter_confirm_password">Please Enter Confirm Password</string>
    <string name="login">Login</string>
    <string name="register_btn">Register</string>

    <string name="degree_celsius_symbol">°C</string>
    <string name="description_weather_condition_icon">weather condition icon</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_visibility">Visibility</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="label_today">Today</string>
    <string name="label_sunset">Sunset</string>
    <string name="registration_title">Registration</string>
    <string name="data_saved_sucess">Data Saved Successfully</string>
    <string name="data_fail_to_save">Data failed to save</string>
    <string name="login_field_can_emplty">Login fields can\'t be empty</string>
    <string name="login_sucess">Login Successful</string>
    <string name="login_sucessful">Login Successful</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>

</resources>