<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    android:padding="@dimen/_10dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/registration_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edEmailAddress"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:ems="10"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edPassword"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmailAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edConfirmPassword"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edUserName"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:hint="@string/enter_your_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edConfirmPassword" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edShortBio"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:hint="@string/enter_your_short_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edUserName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edShortBio" />

</androidx.constraintlayout.widget.ConstraintLayout>
